# tonghuashun-ifind-skill

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
docs/superpowers/plans/: 2026-04-06-tonghuashun-ifind-skill.md
docs/superpowers/specs/: 2026-04-06-tonghuashun-ifind-skill-design.md
scripts/: install_skill.sh  validate_skill.sh
skills/tonghuashun-ifind/: SKILL.md
skills/tonghuashun-ifind/agents/: openai.yaml
skills/tonghuashun-ifind/references/: full-examples.md  routing.md  usage.md
skills/tonghuashun-ifind/scripts/: ifind_cli.py
skills/tonghuashun-ifind/scripts/runtime/tonghuashun_ifind_skill/: auth.py  browser_login.py  client.py  fallback.py  routing.py
tests/: conftest.py  test_auth.py  test_browser_login.py  test_cli.py  test_client.py  test_fallback.py  test_llm_routing.py  test_repository_metadata.py  test_routing.py  test_state.py
tonghuashun-ifind/: SKILL.md
tonghuashun-ifind-skill/: SKILL.md
tonghuashun-ifind-skill/references/: usage.md
tonghuashun-ifind/agents/: openai.yaml
tonghuashun-ifind/references/: capability-matrix.md  full-examples.md  routing.md  usage.md  use-cases.md
tonghuashun-ifind/scripts/: ifind_cli.py
tonghuashun-ifind/scripts/runtime/tonghuashun_ifind_skill/: auth.py  browser_login.py  client.py  endpoint_catalog.py  fallback.py  models.py  routing.py  state.py
