[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tonghuashun-ifind-skill"
version = "0.4.2"
description = "Tonghuashun iFinD skill for OpenClaw with deterministic routing and Tencent fallback for common stock and index queries."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.43.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "tonghuashun-ifind/scripts/runtime",
]

[tool.hatch.build.targets.wheel]
packages = [
    "tonghuashun-ifind/scripts/runtime/tonghuashun_ifind_skill",
]

[tool.uv]
default-groups = ["dev"]
