[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tonghuashun-ifind-skill"
version = "0.5.0"
description = "tonghuashun-ifind-skill for OpenClaw with mandatory iFinD authentication and optional LLM-assisted natural language routing."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "tonghuashun-ifind-skill/scripts/runtime",
]

[tool.hatch.build.targets.wheel]
packages = [
    "tonghuashun-ifind-skill/scripts/runtime/tonghuashun_ifind_skill",
]

[tool.uv]
default-groups = ["dev"]
